# Weather_bot_2_0_on_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Weather_Bot_2_0/: Weather_Bot_2_0.cpp  _api_tgid.json  bot.cpp  bot.h  weather.cpp  weather.h  weather_api.cpp  weather_api.h  weather_text.cpp  weather_text.h
